--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="container">
                 <h2>O que é o Bot Automático?</h2>
                 <p>
-                    O nosso bot foi criado especialmente para jogadores de Clash of Clans que desejam automatizar suas vilas. Ele realiza ações automaticamente, como coleta de recursos, treinamentos e ataques básicos, evolução de muros,defesas e herois — tudo de forma inteligente e segura, economizando seu tempo e mantendo seu progresso no jogo.
+                    O nosso bot foi criado especialmente para jogadores de Clash of Clans que desejam automatizar suas vilas. Ele realiza ações automaticamente, como coleta de recursos, treinamentos e ataques básicos — tudo de forma inteligente e segura, economizando seu tempo e mantendo seu progresso no jogo.
                 </p>
             </div>
         </section>
@@ -39,36 +39,45 @@
         <section id="pricing" class="content-section reveal">
             <div class="container">
                 <h2><i class="fa-solid fa-tags"></i> Tabela de Preços</h2>
+                <p style="text-align: center; color: var(--text-muted); margin-top: -1rem; margin-bottom: 2rem;">Clique em um plano para contratar via WhatsApp!</p>
                 <div class="pricing-grid">
                     
-                    <div class="price-card">
-                        <i class="fa-solid fa-file-archive card-icon"></i>
-                        <h3>Envio dos Aplicativos</h3>
-                        <p>Apenas os arquivos necessários para uso do bot.</p>
-                        <div class="price">R$ 59,90</div>
-                    </div>
+                    <a href="https://api.whatsapp.com/send?phone=5511983370949&text=Olá,%20tenho%20interesse%20no%20plano%20*Envio%20dos%20Aplicativos*%20(R$%2059,90)." target="_blank" class="price-card-link">
+                        <div class="price-card">
+                            <i class="fa-solid fa-file-archive card-icon"></i>
+                            <h3>1️⃣ Envio dos Aplicativos</h3>
+                            <p>Apenas os arquivos necessários para uso do bot.</p>
+                            <div class="price">R$ 59,90</div>
+                        </div>
+                    </a>
                     
-                    <div class="price-card highlighted">
-                        <div class="highlight-badge">Mais Popular</div>
-                        <i class="fa-solid fa-cogs card-icon"></i>
-                        <h3>Envio + Configuração</h3>
-                        <p>Envio dos aplicativos + instalação e configuração completa.</p>
-                        <div class="price">R$ 89,90</div>
-                    </div>
+                    <a href="https://api.whatsapp.com/send?phone=5511983370949&text=Olá,%20tenho%20interesse%20no%20plano%20*Envio%20+%20Configuração%20Completa*%20(R$%2089,90)." target="_blank" class="price-card-link">
+                        <div class="price-card highlighted">
+                            <div class="highlight-badge">Mais Popular</div>
+                            <i class="fa-solid fa-cogs card-icon"></i>
+                            <h3>2️⃣ Envio + Configuração</h3>
+                            <p>Envio dos aplicativos + instalação e configuração completa.</p>
+                            <div class="price">R$ 89,90</div>
+                        </div>
+                    </a>
 
-                    <div class="price-card additional-service">
-                        <i class="fa-brands fa-telegram card-icon"></i>
-                        <h3><i class=></i> Controle via Telegram</h3>
-                        <p>Vinculação do bot ao seu Telegram para comandos à distância.</p>
-                        <div class="price">R$ 10,00</div>
-                    </div>
+                    <a href="https://api.whatsapp.com/send?phone=5511983370949&text=Olá,%20tenho%20interesse%20no%20serviço%20adicional%20*Controle%20via%20Telegram*%20(R$%2010,00)." target="_blank" class="price-card-link">
+                        <div class="price-card additional-service">
+                            <i class="fa-brands fa-telegram card-icon"></i>
+                            <h3><i class="fa-solid fa-plus"></i> Controle via Telegram</h3>
+                            <p>Vinculação do bot ao seu Telegram para comandos à distância.</p>
+                            <div class="price">R$ 10,00</div>
+                        </div>
+                    </a>
 
-                    <div class="price-card additional-service">
-                        <i class="fa-solid fa-house-chimney-medical card-icon"></i>
-                        <h3><i class=></i> Adicionar Vilas Extras</h3>
-                        <p>Adicione mais contas/vilas para usar simultaneamente.</p>
-                        <div class="price">R$ 10,00 <span class="price-note">por conta</span></div>
-                    </div>
+                    <a href="https://api.whatsapp.com/send?phone=5511983370949&text=Olá,%20tenho%20interesse%20no%20serviço%20adicional%20*Adicionar%20Vilas%20Extras*%20(R$%2010,00%20por%20conta)." target="_blank" class="price-card-link">
+                        <div class="price-card additional-service">
+                            <i class="fa-solid fa-house-chimney-medical card-icon"></i>
+                            <h3><i class="fa-solid fa-plus"></i> Adicionar Vilas Extras</h3>
+                            <p>Adicione mais contas/vilas para usar simultaneamente.</p>
+                            <div class="price">R$ 10,00 <span class="price-note">por conta</span></div>
+                        </div>
+                    </a>
 
                 </div>
             </div>
