--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Automático para Clash of Clans</title>
+
+    <meta name="description" content="Automatize sua vila no Clash of Clans com nosso bot inteligente. Colete recursos, treine tropas e evolua de forma segura e eficiente.">
+
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bot Automático para Clash of Clans">
+    <meta property="og:description" content="Automatize sua vila no Clash of Clans com nosso bot inteligente e seguro.">
+    <meta property="og:image" content="https://seu-usuario.github.io/seu-repositorio/background.jpg">
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
