--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <a href="https://api.whatsapp.com/send?phone=5511983370949&text=Olá,%20tenho%20interesse%20no%20plano%20*Envio%20dos%20Aplicativos*%20(R$%2059,90)." target="_blank" class="price-card-link">
                         <div class="price-card">
                             <i class="fa-solid fa-file-archive card-icon"></i>
-                            <h3>1️⃣ Envio dos Aplicativos</h3>
+                            <h3>Envio dos Aplicativos</h3>
                             <p>Apenas os arquivos necessários para uso do bot.</p>
                             <div class="price">R$ 59,90</div>
                         </div>
@@ -64,7 +64,7 @@
                         <div class="price-card highlighted">
                             <div class="highlight-badge">Mais Popular</div>
                             <i class="fa-solid fa-cogs card-icon"></i>
-                            <h3>2️⃣ Envio + Configuração</h3>
+                            <h3>Envio + Configuração</h3>
                             <p>Envio dos aplicativos + instalação e configuração completa.</p>
                             <div class="price">R$ 89,90</div>
                         </div>
@@ -73,7 +73,7 @@
                     <a href="https://api.whatsapp.com/send?phone=5511983370949&text=Olá,%20tenho%20interesse%20no%20serviço%20adicional%20*Controle%20via%20Telegram*%20(R$%2010,00)." target="_blank" class="price-card-link">
                         <div class="price-card additional-service">
                             <i class="fa-brands fa-telegram card-icon"></i>
-                            <h3><i class="fa-solid fa-plus"></i> Controle via Telegram</h3>
+                            <h3><i class=></i> Controle via Telegram</h3>
                             <p>Vinculação do bot ao seu Telegram para comandos à distância.</p>
                             <div class="price">R$ 10,00</div>
                         </div>
@@ -82,7 +82,7 @@
                     <a href="https://api.whatsapp.com/send?phone=5511983370949&text=Olá,%20tenho%20interesse%20no%20serviço%20adicional%20*Adicionar%20Vilas%20Extras*%20(R$%2010,00%20por%20conta)." target="_blank" class="price-card-link">
                         <div class="price-card additional-service">
                             <i class="fa-solid fa-house-chimney-medical card-icon"></i>
-                            <h3><i class="fa-solid fa-plus"></i> Adicionar Vilas Extras</h3>
+                            <h3><i class=></i> Adicionar Vilas Extras</h3>
                             <p>Adicione mais contas/vilas para usar simultaneamente.</p>
                             <div class="price">R$ 10,00 <span class="price-note">por conta</span></div>
                         </div>
